# ETL_DuckDB

./: README.md  apidata2024_11_21.parquet  apidata2024_11_22.parquet  apidata2024_11_23.parquet  apidata2024_11_24.parquet  apidata2025_05_20.parquet  apidata2025_05_21.parquet  apidata2025_05_22.parquet  apidata2025_05_23.parquet  data.db  data.parquet  git-agent.py  pyproject.toml  report.md  test-PyGAM.py
scripts/: agent_analyst.py  api.py  extract.py  generate_report.py  git-agent.py  load.py  main.py  price_optimization.py  report.py  t.py  transform.py  utils.py
