[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
    "numpy>=2.2.5",
    "requests>=2.32.3",
    "pyarrow>=20.0.0",
    "fastparquet>=2024.11.0",
    "agno>=1.5.2",
    "google-genai>=1.16.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
    "pygam>=0.8.0",
    "plotnine>=0.14.5",
    "pygithub>=2.6.1",
    "scikit-learn>=1.7.0",
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
]
